cmake_minimum_required (VERSION 2.6)
project (15puzzle)
set(CMAKE_BUILD_TYPE Release)

find_package( Boost 1.40.0 COMPONENTS thread program_options)
if(Boost_FOUND)
	include_directories(${Boost_INCLUDE_DIRS})
	include_directories("${PROJECT_SOURCE_DIR}/include")
	add_subdirectory (src)
	add_executable(15puzzle main.cpp)
	target_link_libraries (15puzzle optimized Board optimized ConsoleLogger optimized IDA_Star optimized Logger optimized Solver ${Boost_LIBRARIES})
endif()
