cmake_minimum_required (VERSION 2.6)
project (15puzzle)
set(CMAKE_BUILD_TYPE Release)

find_package(Boost 1.49.0 COMPONENTS thread program_options system)
if(Boost_FOUND)
	include_directories(${Boost_INCLUDE_DIRS})
	include_directories("${PROJECT_SOURCE_DIR}/include")
	add_subdirectory (src/)
	add_executable(15puzzle main.cpp)
	target_link_libraries (15puzzle Board ConsoleLogger IDA_Star Logger Solver ${Boost_LIBRARIES})
endif()
